Falta agregar funcionalidades Back End

--- a/partials/header.html
+++ b/partials/header.html
@@ -1,8 +1,8 @@
 <header class="bg-white border-bottom py-3 px-4">
     <div class="d-flex align-items-center">
         <div class="dropdown" id="notif-wrapper">
-            <button id="notif-bell" 
-                    class="btn btn-light rounded-circle p-2 position-relative" 
+        <button id="notif-bell" 
+            class="btn btn-light rounded-circle p-2 position-relative" 
                     type="button" 
                     data-bs-toggle="dropdown" 
                     aria-expanded="false">
@@ -36,9 +36,9 @@
                         </a>
                     </div>
                     <div class="border-top">
-                        <a href="notifications.html" id="view-all-notifs" class="dropdown-item text-primary text-center py-2">
-                            Ver todas
-                        </a>
+                        <button id="mark-all-read" class="dropdown-item text-primary text-center py-2" type="button">
+                            Marcar todo como leído
+                        </button>
                     </div>
                 </div>
             </div>
